# EMRGY_Project_Econ_Tool

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
examples/: basic_project.py  emrgy_architecture_demo.ipynb
src/emrgy_valuation/: __init__.py  assets.py  core.py  engine.py  finance.py  revenue.py
tests/: test_valuation.py
