[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "emrgy-valuation"
version = "0.1.0"
description = "Modular valuation engine for EMRGY-style distributed hydropower projects."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "EMRGY Valuation Team" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
